@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-09-17T00:50:58Z",
-  "count_outdated" : 1025,
-  "uniques_outdated" : 631,
-  "count" : 1038,
-  "uniques" : 644,
+  "timestamp" : "2025-09-19T00:52:52Z",
+  "count_outdated" : 1026,
+  "uniques_outdated" : 632,
+  "count" : 1040,
+  "uniques" : 646,
   "clones" : [
-    {
-      "timestamp": "2025-09-04T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-09-05T00:00:00Z",
       "count": 1,
@@ -106,6 +97,15 @@
     },
     {
       "timestamp": "2025-09-16T00:00:00Z",
+      "count": 2,
+      "count_minmax": [ 2, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2025-09-18T00:00:00Z",
       "count": 2,
       "count_minmax": [ 2, 2 ],
       "count_decinc": [ 0, 2 ],
