@@ -1,12 +1,7 @@
 {
-  "count": 13,
-  "uniques": 3,
+  "count": 14,
+  "uniques": 5,
   "clones": [
-    {
-      "timestamp": "2025-09-04T00:00:00Z",
-      "count": 1,
-      "uniques": 1
-    },
     {
       "timestamp": "2025-09-05T00:00:00Z",
       "count": 1,
@@ -59,6 +54,11 @@
     },
     {
       "timestamp": "2025-09-16T00:00:00Z",
+      "count": 2,
+      "uniques": 2
+    },
+    {
+      "timestamp": "2025-09-18T00:00:00Z",
       "count": 2,
       "uniques": 2
     }
