@@ -1,3 +1,12 @@
+2025-09-19T00:52:52Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17845234253 # 771
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-19
+* notice: last 14d: unq all: 5 14
+* notice: prev accum: outdated-unq outdated-all / unq all: 631 1025 / 644 1038
+* notice: next accum: outdated-unq outdated-all / unq all: 632 1026 / 646 1040
+* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
+* notice: removed / changed dates: [2025-09-04] / [2025-09-18]
+
 2025-09-17T00:50:58Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/17783159547 # 769
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2025-09-17
